--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             <table>
                 <tr>
                     <td><label for="here">Username:</label></td>
-                    <td><input type="text" name="username"></td>
+                    <td><input type="text" name="username" id = "here" required></td>
                 </tr>
 
                 <tr>
-                    <td><label for="">Tweet:</label></td>
-                    <td><input type="text" name="tweet"></td>
+                    <td><label for="here2">Tweet:</label></td>
+                    <td><input type="text" name="tweet" id = "here2" required></td>
                 </tr>
 
                 <tr>
